# Greper

./: .gitignore  CMakeLists.txt  README.md  greper.cpp  greper.hpp  main.cpp  main.new.cpp
test/: first.txt
test/test2/: second.txt
